--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,11 @@
   "dotenv": "^16.4.5",
   "express": "^4.18.2",
   "google-auth-library": "^9.6.3",
-  "mongoose": "^8.1.1"
+  "mongoose": "^8.1.1",
+  "express-ws": "^5.0.2"
 },
   "devDependencies": {
+    "@types/express-ws": "^3.0.4",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
