--- a/backend/package.json
+++ b/backend/package.json
@@ -13,15 +13,16 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC", "dependencies": {
-  "bcrypt": "^5.1.1",
-  "cors": "^2.8.5",
-  "dotenv": "^16.4.5",
-  "express": "^4.18.2",
-  "google-auth-library": "^9.6.3",
-  "mongoose": "^8.1.1",
-  "express-ws": "^5.0.2"
-},
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "google-auth-library": "^9.6.3",
+    "mongoose": "^8.1.1",
+    "express-ws": "^5.0.2"
+  },
   "devDependencies": {
     "@types/express-ws": "^3.0.4",
     "@types/bcrypt": "^5.0.2",
